--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
         body {
             font-family: 'Poppins', sans-serif;
         }
+        /* ATUALIZAÇÃO: Estilo do banner principal com imagem de fundo */
         .hero-bg {
-            background-color: #1a202c;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%232d3748' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            /* INSTRUÇÃO: Para usar a sua imagem, siga os passos na conversa.
+              Cole o seu link de imagem direto aqui, substituindo o link de exemplo.
+            */
+            background-image: linear-gradient(rgba(26, 32, 44, 0.7), rgba(26, 32, 44, 0.7)), url('https://i.pinimg.com/736x/ee/33/7f/ee337f1600f615cb05c4d8d254ad11f4.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         .btn-download {
             transition: all 0.3s ease;
@@ -60,7 +66,7 @@
     <!-- Secção Principal (Hero) -->
     <header class="hero-bg text-white">
         <div class="max-w-6xl mx-auto px-4 py-20 md:py-32 text-center">
-            <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">A Ferramenta Definitiva para Coleta de Dados GPS</h1>
+            <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">A Ferramenta definitiva para coleta de dados GPS</h1>
             <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Precisão, organização e exportação fácil para profissionais de campo. Desenvolvido por geógrafo para todos.</p>
             <a href="https://drive.google.com/file/d/1Du_1KI1QNiKqHWnIF3-LdUsQ2RbBid9A/view?usp=sharing" target="_blank" class="btn-download inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold text-lg py-4 px-10 rounded-full shadow-lg">
                 <i class="fas fa-download mr-3"></i>
@@ -72,12 +78,12 @@
     <!-- Secção de Funcionalidades -->
     <section id="features" class="py-20">
         <div class="max-w-6xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-2">Tudo o que Você Precisa</h2>
+            <h2 class="text-3xl font-bold mb-2">Tudo o que você precisa</h2>
             <p class="text-gray-600 mb-12">Funcionalidades pensadas para o trabalho de campo.</p>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="feature-card bg-white p-8 rounded-xl shadow-lg">
                     <div class="text-blue-600 mb-4"><i class="fas fa-satellite-dish fa-3x"></i></div>
-                    <h3 class="text-xl font-bold mb-2">Dados em Tempo Real</h3>
+                    <h3 class="text-xl font-bold mb-2">Dados em tempo real</h3>
                     <p class="text-gray-600">Acompanhe sua latitude, longitude, precisão e o número de satélites em tempo real.</p>
                 </div>
                 <div class="feature-card bg-white p-8 rounded-xl shadow-lg">
@@ -97,13 +103,13 @@
     <!-- Secção Uso Académico -->
     <section id="academic" class="bg-gray-100 py-20">
         <div class="max-w-6xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-2">Ideal para Trabalhos Acadêmicos</h2>
+            <h2 class="text-3xl font-bold mb-2">Ideal para trabalhos acadêmicos</h2>
             <p class="text-gray-600 mb-12">Perfeito para TCCs, dissertações e teses que envolvem trabalho de campo.</p>
             <div class="grid md:grid-cols-3 gap-8 text-left">
                 <div class="bg-white p-6 rounded-lg shadow">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-book-open text-blue-500 fa-2x mr-4"></i>
-                        <h3 class="text-lg font-semibold">Rigor Metodológico</h3>
+                        <h3 class="text-lg font-semibold">Rigor metodológico</h3>
                     </div>
                     <p class="text-gray-600">Exporte dados em CSV ou KML para incluir facilmente na sua metodologia, com registo de precisão para cada ponto.</p>
                 </div>
@@ -128,7 +134,7 @@
     <!-- Secção de Instalação -->
     <section id="install" class="py-20">
         <div class="max-w-4xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-12">Como Instalar</h2>
+            <h2 class="text-3xl font-bold mb-12">Como instalar</h2>
             <div class="flex flex-col md:flex-row justify-center items-center gap-8">
                 <div class="text-left space-y-6">
                     <div class="flex items-start">
@@ -141,7 +147,7 @@
                     <div class="flex items-start">
                         <div class="flex-shrink-0 w-12 h-12 bg-blue-600 text-white rounded-full flex items-center justify-center text-xl font-bold">2</div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-semibold">Autorize a Instalação</h3>
+                            <h3 class="text-lg font-semibold">Autorize a instalação</h3>
                             <!-- CORREÇÃO DA PALAVRA -->
                             <p class="text-gray-600">No seu <strong>smartphone</strong>, encontre o ficheiro e toque nele. O Android pedirá permissão para "instalar de fontes desconhecidas". Autorize.</p>
                         </div>
